fixed top banner on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2159,6 +2159,10 @@ input, select, textarea {
         padding-bottom: 1px;
       }
 
+      #top-banner {
+        margin-top: 44px;
+      }
+
       #titleBar {
         -moz-backface-visibility: hidden;
         -webkit-backface-visibility: hidden;
